--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 my-project-aw-test-1-8e97c0495cd8.json
 terraform_deployment/terraform/*.tfvars
 terraform_deployment/terraform/*.tfvars.json
+terraform_deployment/terraform/.terraform/providers/
+
+# Terraform state files
+terraform_deployment/terraform/*.tfstate
+terraform_deployment/terraform/*.tfstate.*
