--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Set the OWNER_LC environment variable to the lowercase owner name
+    - name: Set lower case owner name
+      run: |
+        echo "OWNER_LC=${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
+
     # Log in to GitHub Container Registry
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
@@ -25,9 +30,9 @@ jobs:
     # Build the Docker image
     - name: Build Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/service_slim:latest .
+        docker build -t ghcr.io/${{ env.OWNER_LC }}/service_slim:latest .
 
     # Push the Docker image to GHCR
     - name: Push Docker image
       run: |
-        docker push ghcr.io/${{ github.repository_owner }}/service_slim:latest
+        docker push ghcr.io/${{ env.OWNER_LC }}/service_slim:latest
