--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,12 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches:
-      - main  # Trigger on pushes to the main branch
+  workflow_dispatch: # Manual
+
+#on:
+#  push:
+#    branches:
+#      - main  # Trigger on pushes to the main branch
 
 jobs:
   build-and-push:
