--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -37,6 +37,13 @@ jobs:
         env:
           TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
           TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+          TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+          TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+          TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+          TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+          TF_VAR_mongodb_database: ${{ secrets.TF_VAR_MONGODB_DATABASE }}
+          TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
 
       # Step 5: Terraform Apply
       - name: Terraform Apply
@@ -45,3 +52,10 @@ jobs:
         env:
           TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
           TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+          TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+          TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+          TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+          TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+          TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
+          TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
