--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -9,15 +9,16 @@ on:
       - main  # Trigger on pull requests to the main branch
 
 env:
-  TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
-  TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
-  TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
-  TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
-  TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
-  TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
-  TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
-  TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
-  TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
+  #TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
+  #TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+  #TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+  #TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+  #TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+  #TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+  #TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+  #TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
+  #TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
+  TF_VAR_github_owner_lowercase: ling_ling23
 
 
 jobs:
@@ -50,15 +51,26 @@ jobs:
         run: terraform plan
         working-directory: terraform_deployment/terraform
         env:
-          TF_VAR_project_id: ${{ env.TF_VAR_project_id }}
-          TF_VAR_google_credentials: ${{ env.TF_VAR_google_credentials }}
-          TF_VAR_github_username: ${{ env.TF_VAR_github_username }}
-          TF_VAR_github_email: ${{ env.TF_VAR_github_email }}
-          TF_VAR_github_token: ${{ env.TF_VAR_github_token }}
-          TF_VAR_mongodb_username: ${{ env.TF_VAR_mongodb_username }}
-          TF_VAR_mongodb_password: ${{ env.TF_VAR_mongodb_password }}
-          TF_VAR_mongodb_database: ${{ env.TF_VAR_mongodb_database }}
-          TF_VAR_mongodb_root_password: ${{ env.TF_VAR_mongodb_root_password }}
+          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
+          TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+          TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+          TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+          TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+          TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+          TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
+          TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
+          TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
+          #TF_VAR_project_id: ${{ env.TF_VAR_project_id }}
+          #TF_VAR_google_credentials: ${{ env.TF_VAR_google_credentials }}
+          #TF_VAR_github_username: ${{ env.TF_VAR_github_username }}
+          #TF_VAR_github_email: ${{ env.TF_VAR_github_email }}
+          #TF_VAR_github_token: ${{ env.TF_VAR_github_token }}
+          #TF_VAR_mongodb_username: ${{ env.TF_VAR_mongodb_username }}
+          #TF_VAR_mongodb_password: ${{ env.TF_VAR_mongodb_password }}
+          #TF_VAR_mongodb_database: ${{ env.TF_VAR_mongodb_database }}
+          #TF_VAR_mongodb_root_password: ${{ env.TF_VAR_mongodb_root_password }}
+          #TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
 
       # Step 5: Terraform Apply
       #- name: Terraform Apply
