--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -37,6 +37,30 @@ jobs:
       - name: Debug Environment Variables
         run: env
 
+      - name: Debug TF_VAR Variables
+        run: |
+          echo "TF_VAR_project_id=$TF_VAR_project_id"
+          echo "TF_VAR_google_credentials=$TF_VAR_google_credentials"
+          echo "TF_VAR_github_username=$TF_VAR_github_username"
+          echo "TF_VAR_github_email=$TF_VAR_github_email"
+          echo "TF_VAR_github_token=$TF_VAR_github_token"
+          echo "TF_VAR_mongodb_username=$TF_VAR_mongodb_username"
+          echo "TF_VAR_mongodb_password=$TF_VAR_mongodb_password"
+          echo "TF_VAR_mongodb_database=$TF_VAR_mongodb_database"
+          echo "TF_VAR_mongodb_root_password=$TF_VAR_mongodb_root_password"
+          echo "TF_VAR_github_owner_lowercase=$TF_VAR_github_owner_lowercase"
+        env:
+          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
+          TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+          TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+          TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+          TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+          TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+          TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
+          TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
+          TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
+
       # Step 5: Terraform Plan
       - name: Terraform Plan
         run: terraform plan
@@ -54,17 +78,17 @@ jobs:
           TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
 
       # Step 6: Terraform Apply
-      #- name: Terraform Apply
-      #  run: terraform apply -auto-approve
-      #  working-directory: terraform_deployment/terraform
-      #  env:
-      #    TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
-      #    TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
-      #    TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
-      #    TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
-      #    TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
-      #    TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
-      #    TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
-      #    TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
-      #    TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
-      #    TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+        working-directory: terraform_deployment/terraform
+        env:
+          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
+          TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
+          TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
+          TF_VAR_github_token: ${{ secrets.GHCR_PAT_1 }}
+          TF_VAR_mongodb_username: ${{ secrets.MONGO_USERNAME }}
+          TF_VAR_mongodb_password: ${{ secrets.MONGO_PASSWORD }}
+          TF_VAR_mongodb_database: ${{ secrets.MONGO_DATABASE }}
+          TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
+          TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
