--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -50,7 +50,7 @@ jobs:
           echo "TF_VAR_mongodb_root_password=$TF_VAR_mongodb_root_password"
           echo "TF_VAR_github_owner_lowercase=$TF_VAR_github_owner_lowercase"
         env:
-          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
+          TF_VAR_project_id: $TF_VAR_project_id
           TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
           TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
           TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
