--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -40,7 +40,6 @@ jobs:
       - name: Debug TF_VAR Variables
         run: |
           echo "TF_VAR_project_id=$TF_VAR_project_id"
-          echo "TF_VAR_google_credentials=$TF_VAR_google_credentials"
           echo "TF_VAR_github_username=$TF_VAR_github_username"
           echo "TF_VAR_github_email=$TF_VAR_github_email"
           echo "TF_VAR_github_token=$TF_VAR_github_token"
@@ -50,7 +49,7 @@ jobs:
           echo "TF_VAR_mongodb_root_password=$TF_VAR_mongodb_root_password"
           echo "TF_VAR_github_owner_lowercase=$TF_VAR_github_owner_lowercase"
         env:
-          TF_VAR_project_id: $TF_VAR_project_id
+          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
           TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
           TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
           TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
@@ -66,7 +65,7 @@ jobs:
         run: terraform plan
         working-directory: terraform_deployment/terraform
         env:
-          TF_VAR_project_id: $TF_VAR_project_id
+          TF_VAR_project_id: ${{ secrets.TF_VAR_PROJECT_ID }}
           TF_VAR_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
           TF_VAR_github_username: ${{ secrets.GH_USERNAME }}
           TF_VAR_github_email: ${{ secrets.GH_EMAIL }}
