--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -77,9 +77,9 @@ jobs:
       #    TF_VAR_mongodb_root_password: ${{ secrets.MONGO_ROOT_PASSWORD }}
       #    TF_VAR_github_owner_lowercase: ${{ env.TF_VAR_github_owner_lowercase }}
 
-      # Step 5: Terraform Plan
+      # Step 5: Terraform Plan -  -var-file=variables.auto.tfvars
       - name: Terraform Plan
-        run: terraform plan -var-file=variables.auto.tfvars
+        run: terraform plan
         working-directory: terraform_deployment/terraform
 
       # Step 6: Terraform Apply
