--- a/.github/workflows/infrastructure_deploy.yml
+++ b/.github/workflows/infrastructure_deploy.yml
@@ -82,6 +82,14 @@ jobs:
         run: terraform plan
         working-directory: terraform_deployment/terraform
 
+      # Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT_1 }}
+
       # Step 6: Terraform Apply
       - name: Terraform Apply
         run: terraform apply -auto-approve
